# svc-humor

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  svc.py
.devcontainer/: Dockerfile
